@startuml
top to bottom direction

class CounterUI {
    +update()
}

class CounterCtrl {
    +plus()
    +minus()
    +reset()
    +getValue()
}

interface CounterI {
    +increment()
    +decrement()
    +reset()
    +getValue()
}

class Counter {
    +increment()
    +decrement()
    +reset()
    +getValue()
}

class MainApp

Counter --|> CounterI
CounterCtrl --> CounterI : uses
CounterUI --> CounterCtrl : uses

MainApp ..> Counter: creates
MainApp ..> CounterCtrl: creates
MainApp ..> CounterUI: creates

@enduml